Installed pod 'RealmSwift'; Refactored AppDelegate.swift and both view controllers to accommodate for Realm; Completed lesson: How to Save Data Using Realm (Create in CRUD)

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 Todoey.xcodeproj/project.xcworkspace/xcuserdata/denis.aleksandrov.xcuserdatad/
 Todoey.xcodeproj/xcuserdata/denis.aleksandrov.xcuserdatad/
+Todoey.xcworkspace/xcuserdata/
+Pods/
